objects/DMAPP__AM_Plan_Revenue_Target__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>DMAPP__DM_Account_Plan__c</referenceTo>
        <relationshipLabel>AM Plan Revenue Targets</relationshipLabel>
        <relationshipName>AM_Plan_Revenue_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__End_Date__c</fullName>
        <defaultValue>DATE(YEAR(Today()),12,31)</defaultValue>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Revenue_Target__c</fullName>
        <label>Revenue Target</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>AM Plan Revenue Target</label>
    <nameField>
        <label>AM Plan Revenue Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AM Plan Revenue Targets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>